<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.UserFeedbackActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/toolbar"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1359902359290652/9430606966">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adView"
            android:layout_margin="5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"

            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:text="@string/your_feedback"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="14dp"
                android:elevation="5dp"
                android:text="@string/any_suggestion"
                android:textColor="@color/black_overlay"
                android:textSize="14sp"
                android:textStyle="bold" />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/send_feedback"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-1359902359290652/3755414936">
            </com.google.android.gms.ads.AdView>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_edittextview"
                android:hint="@string/your_name"
                android:padding="15dp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_edittextview"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_edittextview">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:hint="@string/write_here"
                    android:padding="15dp" />
            </LinearLayout>

            <Button
                android:id="@+id/send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_edittextview"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Send"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-1359902359290652/4178280287">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>